src/server/snapshots/djinn_server__server__tests__task_count_grouped_by_priority_response.snap
---
source: src/server/mod.rs
expression: task_count_priority
---
{
  "groups": [
    {
      "count": 1,
      "key": "0"
    }
  ]
}
