src/server/snapshots/djinn_server__server__tests__task_count_grouped_by_status_response.snap
---
source: src/server/mod.rs
expression: task_count_status
---
{
  "groups": [
    {
      "count": 1,
      "key": "backlog"
    }
  ]
}
